style o botão de fechar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
             </ul>
             <div>
-                <button onclick="esconder()">Fechar</button>
+                <button id = "fechar" onclick="esconder()">Fechar</button>
             </div>
         </div>
 
